--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/logo2.jpg" />
+    <meta name="description" content="full service engineering and manufacturing firm" />
+    <meta name="keywords" content="cooling towers ,  hydraulic/ pneumatic systems , automation , reactors tanks , heat exchangers ,  MEP solutions" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ALFAMEC</title>
   </head>
