--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="./src/assets/favIcon.png" />
     <meta name="description" content="full service engineering and manufacturing firm" />
-    <meta name="keywords" content="cooling towers ,  hydraulic/ pneumatic systems , automation , reactors tanks , heat exchangers ,  MEP solutions" />
+    <meta name="keywords" content="cooling towers , alfamec , hydraulic/ pneumatic systems , automation , reactors tanks , heat exchangers ,  MEP solutions" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ALFAMEC</title>
   </head>
